--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         </p>
     </header>
 
-    <form id = "login-form">
+    <form action="friend.html" method="get" id = "login-form">
         <input type = "text" placeholder = "Email or phone number"/>
         <input type = "password" placeholder= "Password"/>
-        <input type = "submit" value ="Log In"/>
+        <input type="submit" value ="Log In"/>
         <a href ="#">Find Kakao Account or Password</a>
     </form>
 
