FInish Friend Screen

--- a/friends.html
+++ b/friends.html
@@ -34,6 +34,47 @@
         </div>
     </header>
 
+    <a id="friends-display-link">
+        <i class="fas fa-info-circle"></i> Friend's Names Display  <i class="fas fa-chevron-right fa-xs"></i>
+    </a>
+
+    <main class="friends-screen">
+        <div class="user-component">
+            <div class="user-component__column">
+                <img
+                src="https://img1.daumcdn.net/thumb/R800x0/?scode=mtistory2&fname=https%3A%2F%2Ft1.daumcdn.net%2Fcfile%2Ftistory%2F2608703452AEC8C20B"
+                class="user-component__avatar" class="user-component--xl"
+                />
+                <div class="user-component__text">
+                    <h4 class="user-component__title">안녕 나는 현우</h4>
+                <!--<h6 class="user-component__subtitle">기모취</h6>-->
+                </div>
+            </div>
+            <div class="user-component__column"></div>
+        </div>
+        <div class="friends-screen__channel">
+            <div class="friends-screen__channel-header">
+                <span>Channel</span>
+                <i class="fas fa-chevron-up fa-sm"></i>
+            </div>
+                <div class="user-component">
+                    <div class="user-component__column">
+                        <img
+                            src="https://play-lh.googleusercontent.com/cf3DwPLbS8Z55sDvUSTQ6PL1goPdm8KbZ81g4TEUAaeUh5LDhkzdjxKQ2RX6BGpv0x4"
+                            class="user-component__avatar user-component__avatar--sm"
+                        />
+                        <div class="user-component__text">
+                            <h4 class="user-component__title"  class="user-component__title--not-bold">Channel</h4>
+                    </div>
+                </div>
+                <div class="user-component__column-second">
+                    <span>2</span>
+                    <i class="fas fa-chevron-right fa-xs"></i>
+                </div>
+            </div>
+        </div>
+    </main>
+
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn"><a class="nav__link" href="friends.html"><i class="fas fa-user fa-2x"></i></a></li>
