--- a/friends.html
+++ b/friends.html
@@ -79,24 +79,33 @@
         <ul class="nav__list">
             <li class="nav__btn"><a class="nav__link" href="friends.html"><i class="fas fa-user fa-2x"></i></a></li>
             <li class="nav__btn">
-                <span class="nav__unread-chat">1</span>
-                <a class="nav__link" href="#">
+                <span class="nav__unread-chat badge">1</span>
+                <a class="nav__link" href="chats.html">
                     <i class="far fa-comment fa-2x"></i>
                 </a>
             </li>
-            <li class="nav__btn"><a class="nav__link" href="#"><i class="fas fa-search fa-2x"></i></a></li>
+            <li class="nav__btn"><a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a></li>
             <li class="nav__btn">
                 <span class="nav__ellipsis-notification"></span>
-                <a class="nav__link" href="#">
+                <a class="nav__link" href="more.html">
                     <i class="fas fa-ellipsis-h fa-2x"></i>
                 </a>
             </li>
         </ul>
     </nav>
+
+    <div id="splash-screen">
+        <i class="fas fa-comment"></i>
+    </div>
+    
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
     >
     </script>
+
+    <div id="no-mobile">
+        <span>Your screen is too big ㅠㅠ</span>
+    </div>
 </body>
 </html>
