--- a/index.html
+++ b/index.html
@@ -44,5 +44,9 @@
       crossorigin="anonymous"
     >
     </script>
+
+    <div id="no-mobile">
+        <span>Your screen is too big ㅠㅠ</span>
+    </div>
 </body>
 </html>
