--- a/chats.html
+++ b/chats.html
@@ -81,7 +81,7 @@
         </script>
 
         <div id="no-mobile">
-            <span>Your screen is too big ㅠㅠ</span>
+            <span>Your screen is very big ㅠㅠ</span>
         </div>
     </body>
 </html>
