--- a/chats.html
+++ b/chats.html
@@ -45,7 +45,7 @@
                         />
                         <div class="user-component__text">
                             <h4 class="user-component__title">현우야</h4>
-                            <h6 class="user-component__subtitle">제발 정신 좀 차리고 똑바로 살아</h6>
+                            <h6 class="user-component__subtitle">파이팅</h6>
                         </div>
                     </div>
                     <div class="user-component__column">
