--- a/chat.html
+++ b/chat.html
@@ -47,7 +47,7 @@
             <div class="message-row__content">
               <div class="message__author">현우야</div>
               <div class="message__info">
-                <div class="message__bubble">정신 좀 차려</div>
+                <div class="message__bubble">왜 안대 ㅠㅠ</div>
                 <span class="message__time">21:27</span>
               </div>
             </div>
@@ -56,7 +56,7 @@
         <div class="message-row message-row--own">
             <div class="message-row__content">
               <div class="message__info">
-                <div class="message__bubble">미쳐버릴 것 같다</div>
+                <div class="message__bubble">그르게 ㅠㅠ</div>
                 <span class="message__time">21:27</span>
               </div>
             </div>
