--- a/chat.html
+++ b/chat.html
@@ -30,7 +30,7 @@
             <a href="chats.html"><i class="fas fa-chevron-left"></i></a>
         </div>
         <div class="settings-header__column">
-            똑바로 좀 살자</div>
+            열심히 해보자</div>
         <div class="settings-header__column cha">
             <i class="fas fa-search"></i>
             <i class="fas fa-bars"></i>
@@ -45,9 +45,9 @@
         <div class="message-row">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIhMzkmwU72UnKbfeppDnp_X8st6QHBns40A&usqp=CAU" />
             <div class="message-row__content">
-              <div class="message__author">현우야</div>
+              <div class="message__author">오오</div>
               <div class="message__info">
-                <div class="message__bubble">왜 안대 ㅠㅠ</div>
+                <div class="message__bubble">드디어 성공~!</div>
                 <span class="message__time">21:27</span>
               </div>
             </div>
@@ -56,7 +56,7 @@
         <div class="message-row message-row--own">
             <div class="message-row__content">
               <div class="message__info">
-                <div class="message__bubble">그르게 ㅠㅠ</div>
+                <div class="message__bubble">야호</div>
                 <span class="message__time">21:27</span>
               </div>
             </div>
