--- a/friends.html
+++ b/friends.html
@@ -95,7 +95,8 @@
     </nav>
 
     <div id="splash-screen">
-        <i class="fas fa-comment"></i>
+        <span class ="text1">Welcome in</span>
+        <span class ="text2">KakaoClone</span>
     </div>
     
     <script
