--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
 <head>
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
@@ -25,19 +25,21 @@
         </div>
     </div>
 
-    <header class = "welcome-header">
-        <h1 class = "welcome-header__title">Welcome to KakaoClone</h1>
-        <p class = "welcome-header__text">
-            If you have a Kakao Account, log in with your email or phone number.
-        </p>
-    </header>
+    <div class="the-box">
+        <header class = "welcome-header">
+            <h1 class = "welcome-header__title">KakaoClone LOGIN</h1>
+            <p class = "welcome-header__text">
+               log in with your email or phone number.
+            </p>
+        </header>
 
-    <form action="friends.html" method="get" id = "login-form">
-        <input type = "text" placeholder = "Email or phone number"/>
-        <input type = "password" placeholder= "Password"/>
-        <input type="submit" value ="Log In"/>
-        <a href ="#">Find Kakao Account or Password</a>
-    </form>
+        <form action="friends.html" method="get" id = "login-form">
+            <input type = "text" placeholder = "Email or phone number"/>
+            <input type = "password" placeholder= "Password"/>
+            <input type="submit" value ="Log In"/>
+            <a href ="#">Find Kakao Account or Password</a>
+        </form>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
