update friend, chat, chats screen

--- a/chat.html
+++ b/chat.html
@@ -30,7 +30,7 @@
             <a href="chats.html"><i class="fas fa-chevron-left"></i></a>
         </div>
         <div class="settings-header__column">
-            열심히 해보자</div>
+            내 일요일 어디갔지</div>
         <div class="settings-header__column cha">
             <i class="fas fa-search"></i>
             <i class="fas fa-bars"></i>
@@ -43,12 +43,12 @@
         </div>
 
         <div class="message-row">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIhMzkmwU72UnKbfeppDnp_X8st6QHBns40A&usqp=CAU" />
+            <img src="https://cdnb.artstation.com/p/assets/images/images/029/709/833/20200825191144/smaller_square/shal-e-1.jpg?1598400704" />
             <div class="message-row__content">
-              <div class="message__author">오오</div>
+              <div class="message__author">ArtFantasy</div>
               <div class="message__info">
-                <div class="message__bubble">드디어 성공~!</div>
-                <span class="message__time">21:27</span>
+                <div class="message__bubble">10cm 신곡이~~@@</div>
+                <span class="message__time">21:22</span>
               </div>
             </div>
         </div>
@@ -56,7 +56,7 @@
         <div class="message-row message-row--own">
             <div class="message-row__content">
               <div class="message__info">
-                <div class="message__bubble">야호</div>
+                <div class="message__bubble">어머나 세상에~~</div>
                 <span class="message__time">21:27</span>
               </div>
             </div>
@@ -101,7 +101,8 @@
     </script>
 
     <div id="no-mobile">
-        <span>Your screen is too big ㅠㅠ</span>
+        <i class="fa fa-comment fa-3x logo"></i>
+        <span>Your screen is too big</span>
     </div>
 </body>
 </html>
