--- a/chats.html
+++ b/chats.html
@@ -40,19 +40,52 @@
                 <div class="user-component">
                     <div class="user-component__column">
                         <img
-                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIhMzkmwU72UnKbfeppDnp_X8st6QHBns40A&usqp=CAU"
+                        src="https://cdnb.artstation.com/p/assets/images/images/029/709/833/20200825191144/smaller_square/shal-e-1.jpg?1598400704"
                         class="user-component__avatar"
                         />
                         <div class="user-component__text">
-                            <h4 class="user-component__title">현우야</h4>
-                            <h6 class="user-component__subtitle">파이팅</h6>
+                            <h4 class="user-component__title">ArtFantasy</h4>
+                            <h6 class="user-component__subtitle">10cm 신곡이~~@@</h6>
                         </div>
                     </div>
                     <div class="user-component__column">
                         <span class="user-component__time">21:22</span>
+                        <div class="badge user-component__unread-chat">3</div>
+                    </div>
+                </div>
+                <div class="user-component">
+                    <div class="user-component__column">
+                        <img
+                        src="https://tumblbug-pci.imgix.net/6e9a642e6e4d5d647835e62e1f0158aec00ba4ff/57897b65a8f4ca1b7ca576347628ad126d724c9b/3e336d83deb5cd70c7ae7181210d9499246e6e63/072f0d2e-92f5-4985-94df-ce9c5a80ff0e.jpg?ixlib=rb-1.1.0&w=1240&h=930&auto=format%2Ccompress&lossless=true&fit=crop&s=3d87229247ec5530a98249d362584d2a"
+                        class="user-component__avatar"
+                        />
+                        <div class="user-component__text">
+                            <h4 class="user-component__title">Wedge</h4>
+                            <h6 class="user-component__subtitle">몇 시간째야 으악</h6>
+                        </div>
+                    </div>
+                    <div class="user-component__column">
+                        <span class="user-component__time">yesterday</span>
                         <div class="badge user-component__unread-chat">1</div>
                     </div>
                 </div>
+                <div class="user-component">
+                    <div class="user-component__column">
+                        <img
+                        src="https://yt3.ggpht.com/ytc/AAUvwnjHVAs6CS1Bmdvegg6uPAfDLIqXQ4tCqe9Nq9yi7Q=s900-c-k-c0x00ffffff-no-rj"
+                        class="user-component__avatar"
+                        />
+                        <div class="user-component__text">
+                            <h4 class="user-component__title">Shal.E</h4>
+                            <h6 class="user-component__subtitle">언제 끝나냐구</h6>
+                        </div>
+                    </div>
+                    <div class="user-component__column">
+                        <span class="user-component__time">Jan 12</span>
+                        <div class="badge user-component__unread-chat">4</div>
+                    </div>
+                </div>
+                
             </a>
         </main>
 
@@ -81,7 +114,8 @@
         </script>
 
         <div id="no-mobile">
-            <span>Your screen is very big ㅠㅠ</span>
-        </div>
+            <i class="fa fa-comment fa-3x logo"></i>
+            <span>Your screen is too big</span>
+        </div>  
     </body>
 </html>
