--- a/friends.html
+++ b/friends.html
@@ -42,15 +42,36 @@
         <div class="user-component">
             <div class="user-component__column">
                 <img
-                src="https://img1.daumcdn.net/thumb/R800x0/?scode=mtistory2&fname=https%3A%2F%2Ft1.daumcdn.net%2Fcfile%2Ftistory%2F2608703452AEC8C20B"
-                class="user-component__avatar" class="user-component--xl"
+                src="https://avatarfiles.alphacoders.com/164/164590.jpg"
+                class="user-component__avatar user-component__avatar--xl"
                 />
                 <div class="user-component__text">
-                    <h4 class="user-component__title">안녕 나는 현우</h4>
+                    <h4 class="user-component__title">Clone</h4>
                 <!--<h6 class="user-component__subtitle">기모취</h6>-->
                 </div>
             </div>
             <div class="user-component__column"></div>
+        </div>
+        <div class="friends-screen__channel">
+            <div class="friends-screen__channel-header">
+                <span>Friend's birthday</span>
+                <i class="fas fa-chevron-up fa-sm"></i>
+            </div>
+                <div class="user-component">
+                    <div class="user-component__column">
+                        <img
+                            src="https://www.crushpixel.com/big-static14/preview4/birthday-cake-icon-on-pink-1692360.jpg"
+                            class="user-component__avatar user-component__avatar--sm"
+                        />
+                        <div class="user-component__text">
+                            <h4 class="user-component__title user-component__title--not-bold">Check your friend's birthday!</h4>
+                    </div>
+                </div>
+                <div class="user-component__column-second">
+                    <span>1</span>
+                    <i class="fas fa-chevron-right fa-xs"></i>
+                </div>
+            </div>
         </div>
         <div class="friends-screen__channel">
             <div class="friends-screen__channel-header">
@@ -64,12 +85,58 @@
                             class="user-component__avatar user-component__avatar--sm"
                         />
                         <div class="user-component__text">
-                            <h4 class="user-component__title"  class="user-component__title--not-bold">Channel</h4>
+                            <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
                     </div>
                 </div>
                 <div class="user-component__column-second">
                     <span>2</span>
                     <i class="fas fa-chevron-right fa-xs"></i>
+                </div>
+            </div>
+        </div>
+        <div class="friends-screen__channel">
+            <div class="friends-screen__channel-header">
+                <span>Friends 3</span>
+                <i class="fas fa-chevron-up fa-sm"></i>
+            </div>
+            <div class="user-component">
+                <div class="user-component__column">
+                    <img
+                        src="https://tumblbug-pci.imgix.net/6e9a642e6e4d5d647835e62e1f0158aec00ba4ff/57897b65a8f4ca1b7ca576347628ad126d724c9b/3e336d83deb5cd70c7ae7181210d9499246e6e63/072f0d2e-92f5-4985-94df-ce9c5a80ff0e.jpg?ixlib=rb-1.1.0&w=1240&h=930&auto=format%2Ccompress&lossless=true&fit=crop&s=3d87229247ec5530a98249d362584d2a"
+                        class="user-component__avatar user-component__avatar--sm"
+                    />
+                    <div class="user-component__text">
+                        <h4 class="user-component__title user-component__title--not-bold">Wedge</h4>
+                    </div>
+                </div>
+                <div class="user-component__column-second">
+                </div>
+            </div>
+            <div class="user-component">
+                <div class="user-component__column">
+                    <img
+                        src="https://yt3.ggpht.com/ytc/AAUvwnjHVAs6CS1Bmdvegg6uPAfDLIqXQ4tCqe9Nq9yi7Q=s900-c-k-c0x00ffffff-no-rj"
+                        class="user-component__avatar user-component__avatar--sm"
+                    />
+                    <div class="user-component__text">
+                        <h4 class="user-component__title user-component__title--not-bold">Shal.E</h4>
+                    </div>
+                </div>
+                <div class="user-component__column-second">
+                </div>
+            </div>
+            
+            <div class="user-component">
+                <div class="user-component__column">
+                    <img
+                        src="https://cdnb.artstation.com/p/assets/images/images/029/709/833/20200825191144/smaller_square/shal-e-1.jpg?1598400704"
+                        class="user-component__avatar user-component__avatar--sm"
+                    />
+                    <div class="user-component__text">
+                        <h4 class="user-component__title user-component__title--not-bold">ArtFantasy</h4>
+                    </div>
+                </div>
+                <div class="user-component__column-second">
                 </div>
             </div>
         </div>
@@ -106,7 +173,8 @@
     </script>
 
     <div id="no-mobile">
-        <span>Your screen is too big ㅠㅠ</span>
+        <i class="fa fa-comment fa-3x logo"></i>
+        <span>Your screen is too big</span>
     </div>
 </body>
 </html>
