--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
     </script>
 
     <div id="no-mobile">
-        <span>Your screen is too big ㅠㅠ</span>
+        <i class="fa fa-comment fa-3x logo"></i>
+        <span>Your screen is too big</span>
     </div>
 </body>
 </html>
