--- a/more.html
+++ b/more.html
@@ -133,8 +133,9 @@
       crossorigin="anonymous"
     >
     </script>
-    <div id="no-mobile">
-        <span>Your screen is too big ㅠㅠ</span>
+   <div id="no-mobile">
+        <i class="fa fa-comment fa-3x logo"></i>
+        <span>Your screen is too big</span>
     </div>
 </body>
 </html>
