--- a/settings.html
+++ b/settings.html
@@ -139,8 +139,9 @@
     </script>
 
 
-    <div id="no-mobile"> 
-        <span>Your screen is too big ㅠㅠ</span>
+    <div id="no-mobile">
+        <i class="fa fa-comment fa-3x logo"></i>
+        <span>Your screen is too big</span>
     </div>
 </body>
 </html>
