--- a/find.html
+++ b/find.html
@@ -72,8 +72,8 @@
 
         <div class="open-post">
             <div class="open-post__column">
-                <div class="open-post__title">#BTS</div>
-                <div class="open-post__hashtag">#BTS#ARMY#FRIENDS</div>
+                <div class="open-post__title">#IU</div>
+                <div class="open-post__hashtag">#IU#U&I#FRIENDS</div>
                 <div class="open-post__members">
                     <img src="https://spnimage.edaily.co.kr/images/photo/files/NP/S/2020/10/PS20100800026.jpg" />
                     <span class="open-post__member-count">802 members</span>
