--- a/more.html
+++ b/more.html
@@ -40,14 +40,14 @@
     
     <main class="main-screen up">  
        
-        <div class="user-component">
+        <div class="user-component user-component__more">
             <div class="user-component__column">
                 <img
-                src="https://img1.daumcdn.net/thumb/R800x0/?scode=mtistory2&fname=https%3A%2F%2Ft1.daumcdn.net%2Fcfile%2Ftistory%2F2608703452AEC8C20B"
+                src="https://avatarfiles.alphacoders.com/164/164590.jpg"
                 class="user-component__avatar" class="user-component--xl"
                 />
                 <div class="user-component__text">
-                    <h4 class="user-component__title">안녕 나는 현우</h4>
+                    <h4 class="user-component__title">Clone</h4>
                 <h6 class="user-component__subtitle">+82 1234 5678  <i class="far fa-lightbulb"></i></h6>
                 </div>
             </div>
