--- a/chat2.html
+++ b/chat2.html
@@ -30,7 +30,7 @@
             <a href="chats.html"><i class="fas fa-chevron-left"></i></a>
         </div>
         <div class="settings-header__column">
-            ArtFantasy</div>
+            Wedge</div>
         <div class="settings-header__column cha">
             <i class="fas fa-search"></i>
             <i class="fas fa-bars"></i>
@@ -39,25 +39,16 @@
 
     <main class="main-chat">
         <div class="chat-date">
-            <span>Tuesday, Jan 15, 2021</span>
+            <span>Tuesday, Jan 14, 2021</span>
         </div>
 
         <div class="message-row">
-            <img src="https://cdnb.artstation.com/p/assets/images/images/029/709/833/20200825191144/smaller_square/shal-e-1.jpg?1598400704" />
+            <img src="https://tumblbug-pci.imgix.net/6e9a642e6e4d5d647835e62e1f0158aec00ba4ff/57897b65a8f4ca1b7ca576347628ad126d724c9b/3e336d83deb5cd70c7ae7181210d9499246e6e63/072f0d2e-92f5-4985-94df-ce9c5a80ff0e.jpg?ixlib=rb-1.1.0&w=1240&h=930&auto=format%2Ccompress&lossless=true&fit=crop&s=3d87229247ec5530a98249d362584d2a" />
             <div class="message-row__content">
-              <div class="message__author">ArtFantasy</div>
+              <div class="message__author">Wedge</div>
               <div class="message__info">
-                <div class="message__bubble">10cm 신곡이~~@@</div>
-                <span class="message__time">21:22</span>
-              </div>
-            </div>
-        </div>
-
-        <div class="message-row message-row--own">
-            <div class="message-row__content">
-              <div class="message__info">
-                <div class="message__bubble">어머나 세상에~~</div>
-                <span class="message__time">21:27</span>
+                <div class="message__bubble">몇시간쨰야</div>
+                <span class="message__time">20:42</span>
               </div>
             </div>
         </div>
