--- a/chat3.html
+++ b/chat3.html
@@ -30,7 +30,7 @@
             <a href="chats.html"><i class="fas fa-chevron-left"></i></a>
         </div>
         <div class="settings-header__column">
-            ArtFantasy</div>
+            Shal.E</div>
         <div class="settings-header__column cha">
             <i class="fas fa-search"></i>
             <i class="fas fa-bars"></i>
@@ -39,16 +39,16 @@
 
     <main class="main-chat">
         <div class="chat-date">
-            <span>Tuesday, Jan 15, 2021</span>
+            <span>Tuesday, Jan 12, 2021</span>
         </div>
 
         <div class="message-row">
-            <img src="https://cdnb.artstation.com/p/assets/images/images/029/709/833/20200825191144/smaller_square/shal-e-1.jpg?1598400704" />
+            <img src="https://yt3.ggpht.com/ytc/AAUvwnjHVAs6CS1Bmdvegg6uPAfDLIqXQ4tCqe9Nq9yi7Q=s900-c-k-c0x00ffffff-no-rj" />
             <div class="message-row__content">
-              <div class="message__author">ArtFantasy</div>
+              <div class="message__author">Shal.E</div>
               <div class="message__info">
-                <div class="message__bubble">10cm 신곡이~~@@</div>
-                <span class="message__time">21:22</span>
+                <div class="message__bubble">맛있는 것도 먹고 게임도 하고</div>
+                <span class="message__time">08:17</span>
               </div>
             </div>
         </div>
@@ -56,8 +56,19 @@
         <div class="message-row message-row--own">
             <div class="message-row__content">
               <div class="message__info">
-                <div class="message__bubble">어머나 세상에~~</div>
-                <span class="message__time">21:27</span>
+                <div class="message__bubble">잠도 자고 해야되는데</div>
+                <span class="message__time">11:58</span>
+              </div>
+            </div>
+        </div>
+
+        <div class="message-row">
+            <img src="https://yt3.ggpht.com/ytc/AAUvwnjHVAs6CS1Bmdvegg6uPAfDLIqXQ4tCqe9Nq9yi7Q=s900-c-k-c0x00ffffff-no-rj" />
+            <div class="message-row__content">
+              <div class="message__author">Shal.E</div>
+              <div class="message__info">
+                <div class="message__bubble">내 일요일 어디갔어 ㅠㅠㅠ</div>
+                <span class="message__time">19:17</span>
               </div>
             </div>
         </div>
