--- a/chats.html
+++ b/chats.html
@@ -53,6 +53,8 @@
                         <div class="badge user-component__unread-chat">3</div>
                     </div>
                 </div>
+            </a>
+            <a href="chat2.html">
                 <div class="user-component">
                     <div class="user-component__column">
                         <img
@@ -69,6 +71,8 @@
                         <div class="badge user-component__unread-chat">1</div>
                     </div>
                 </div>
+            </a>
+            <a href="chat3.html">         
                 <div class="user-component">
                     <div class="user-component__column">
                         <img
@@ -77,7 +81,7 @@
                         />
                         <div class="user-component__text">
                             <h4 class="user-component__title">Shal.E</h4>
-                            <h6 class="user-component__subtitle">언제 끝나냐구</h6>
+                            <h6 class="user-component__subtitle">내 일요일 어디갔지</h6>
                         </div>
                     </div>
                     <div class="user-component__column">
@@ -85,8 +89,7 @@
                         <div class="badge user-component__unread-chat">4</div>
                     </div>
                 </div>
-                
-            </a>
+            </a>   
         </main>
 
         <nav class="nav">
